(1) Some sidebar fixes - it eases out a little quicker, if you click outside of the header and sidebar the sidebar closes. (2) Added an FAQ page and changed lottery logistics to a link to it - tested this on iPhone and it works fine (3) Added some different CSS stuff so we can play around with colors, themes, etc. (4) Added a return to top button below floor plans on mobile

--- a/students/static/students/header/header-dreamteam.css
+++ b/students/static/students/header/header-dreamteam.css
@@ -7,8 +7,21 @@
     margin-bottom: 0px;
 }
 
+.navbar-toggle > span {
+    background-color: black;
+}
+
+.navbar-toggle:hover > span,
+.navbar-toggle:active > span {
+    background-color: white;
+}
+    
+
 .header {
     min-height: 65px;
+    background-color: #e9e9e9;
+    color: black;
+    border: none;
     /*vertical-align: middle;*/
 }
 
@@ -26,6 +39,19 @@
     line-height: 65px;
     font-size: 14pt;
     padding-right: 12px;
+    color: black;
+    font-family: 'Work Sans', sans-serif;
+    text-transform: uppercase;
+}
+
+.navbar-site-name {
+    color: black;
+    font-family: 'Proza Libre', sans-serif;
+}
+
+.navbar-site-name:hover,
+.navbar-site-name:active {
+    color: white;
 }
 
 .navbar-header {
